ADD: room database for saved/favorite repos; favorites repo UI implementation

--- a/app/src/main/res/layout/fragment_trending_repos.xml
+++ b/app/src/main/res/layout/fragment_trending_repos.xml
@@ -19,17 +19,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="4dp"
     tools:context=".trending.TrendingReposFragment"
     >
 
-    <TextView
-        android:id="@+id/bus_stop_header"
+    <Button
+        android:id="@+id/btn_favorites"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
         android:padding="8dp"
-        android:text="Filter"
-        android:textSize="16sp"
+        android:gravity="center_horizontal"
+        android:text="Favorites"
+        android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="parent"
         app:layout_constraintStart_toStartOf="@id/spinner"
         app:layout_constraintTop_toTopOf="parent"
@@ -41,21 +42,21 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/bus_stop_header"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_favorites"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.52"
-        app:layout_constraintStart_toEndOf="@id/bus_stop_header"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@id/btn_favorites"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.5" />
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_trending_repos"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        app:layout_constraintTop_toBottomOf="@id/bus_stop_header"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/btn_favorites" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
