--- a/app/src/main/res/layout/item_trending_repo.xml
+++ b/app/src/main/res/layout/item_trending_repo.xml
@@ -21,10 +21,22 @@
 
         <TextView
             android:id="@+id/txtAuthor"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"/>
+
+        <ImageButton
+            android:layout_margin="16dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            app:srcCompat="@drawable/ic_baseline_favorite_24"
+            android:layout_gravity="end|center_vertical"
+            android:id="@+id/btn_fav"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+             />
+
 
     </LinearLayout>
 
