--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,18 +23,25 @@
         android:id="@+id/trendingReposFragment"
         android:name="com.example.githubapi.trending.TrendingReposFragment"
         android:label="@string/app_name"
-        tools:layout="@layout/trending_repos_fragment">
+        tools:layout="@layout/fragment_trending_repos">
         <action
             android:id="@+id/action_fullListFragment_to_detailFragment"
             app:destination="@id/repoDetailFragment" />
+        <action
+            android:id="@+id/action_trendingReposFragment_to_favorites"
+            app:destination="@id/favoritesRepoFragment" />
     </fragment>
     <fragment
         android:id="@+id/repoDetailFragment"
         android:name="com.example.githubapi.trendingdetail.TrendingRepoDetailFragment"
         android:label="Details"
-        tools:layout="@layout/detail_repo_fragment">
+        tools:layout="@layout/fragment_detail_repo">
         <argument
             android:name="repoId"
             app:argType="integer" />
     </fragment>
+    <fragment  android:id="@+id/favoritesRepoFragment"
+        android:name="com.example.githubapi.favorites.FavoritesReposFragment"
+        android:label="Favorites"
+        tools:layout="@layout/fragment_favorites_repos" />
 </navigation>
