--- a/app/src/main/res/layout/fragment_trending_repos.xml
+++ b/app/src/main/res/layout/fragment_trending_repos.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:padding="4dp"
     tools:context=".trending.TrendingReposFragment">
 
     <LinearLayout
-
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -18,20 +17,19 @@
             android:id="@+id/btn_favorites"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
             android:layout_weight="1"
+            android:gravity="center_horizontal"
             android:padding="8dp"
             android:text="Favorites"
             android:textSize="14sp" />
 
         <Spinner
-            android:layout_marginStart="8dp"
             android:id="@+id/spinner"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:padding="8dp"
+            android:layout_marginStart="8dp"
             android:layout_weight="1"
-            />
+            android:padding="8dp" />
 
         >
 
@@ -39,10 +37,34 @@
     </LinearLayout>
 
 
+    <ImageView
+
+        android:id="@+id/iv_error"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"
+        app:srcCompat="@drawable/ic_baseline_error_24">
+
+    </ImageView>
+
+    <TextView
+        android:id="@+id/tv_error"
+        android:visibility="invisible"
+        android:layout_marginTop="8dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/iv_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Error on fetching network data">
+
+    </TextView>
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_trending_repos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-  />
+        android:layout_below="@+id/container" />
 
-</LinearLayout>
+</RelativeLayout>
